# exxplored-django

./: .gitignore  README.md  manage.py  pyproject.toml
docs/: check_requirements.bat  expert.html  index.html  intro.html
docs/js/: index.js
docs/slides/: basic.html  intermediate.html  intro.html
eXXploreDjango/: asgi.py  settings.py  urls.py  wsgi.py
pirateDatabase/: admin.py  apps.py  models.py  tests.py
pirateDatabase/fixtures/: piratesFixture.json
pirateDatabase/migrations/: 0001_initial.py  0002_piratenote.py
templates/htmx-trial/: pirates_list.html
templates/htmx-trial/components/: pirate_detail.html  pirate_notes.html  pirate_table.html
